# solana-record-service

./: .gitignore  Cargo.toml  codama.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: crates-publish.yml  npm-publish.yml
program/: Cargo.toml
program/src/: constants.rs  lib.rs  tests.rs  utils.rs
program/src/instructions/: burn_record_token.rs  burn_tokenized_record.rs  create_class.rs  create_credential.rs  create_record.rs  create_record_authority_delegate.rs  create_record_delegate.rs  delete_record.rs  delete_record_authority_delegate.rs  freeze_class.rs  freeze_record.rs  freeze_tokenized_record.rs  mint_record_token.rs  mint_tokenized_record.rs  mod.rs  transfer_record.rs  transfer_tokenized_record.rs  update_class.rs  update_credential.rs  update_record.rs  update_record_authority_delegate.rs  update_tokenized_record.rs
program/src/state/: class.rs  credential.rs  mod.rs  record.rs  record_delegate.rs
program/src/token2022/: burn.rs  burn_checked.rs  close_account.rs  constants.rs  freeze_account.rs  initialize_account_3.rs  initialize_group.rs  initialize_group_member_pointer.rs  initialize_group_pointer.rs  initialize_member.rs  initialize_metadata.rs  initialize_metadata_pointer.rs  initialize_mint2.rs  initialize_mint_2.rs  initialize_mint_close_authority.rs  initialize_permanent_delegate.rs  mint_to_checked.rs  mod.rs  state.rs  thaw_account.rs  transfer_checked.rs  update_metadata.rs
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/rust/src/client/: programs.rs
sdk/rust/src/client/accounts/: class.rs  mod.rs  record.rs  record_delegate.rs
sdk/rust/src/client/instructions/: burn_record_token.rs  burn_tokenized_record.rs  create_class.rs  create_record.rs  create_record_authority_delegate.rs  create_record_tokenizable.rs  delete_record.rs  delete_record_authority_delegate.rs  freeze_class.rs  freeze_record.rs  freeze_tokenized_record.rs  mint_record_token.rs  mint_tokenized_record.rs  mod.rs  transfer_record.rs  transfer_tokenized_record.rs  update_class_frozen.rs  update_class_metadata.rs  update_record.rs  update_record_authority_delegate.rs  update_record_token.rs  update_record_tokenizable.rs  update_tokenized_record.rs
sdk/rust/src/client/types/: metadata.rs  mod.rs
sdk/ts/: package.json  pnpm-lock.yaml
sdk/ts/src/: index.ts
sdk/ts/src/accounts/: class.ts  index.ts  record.ts  recordDelegate.ts
sdk/ts/src/errors/: index.ts  solanaRecordService.ts
sdk/ts/src/instructions/: burnRecordToken.ts  burnTokenizedRecord.ts  createClass.ts  createRecord.ts  createRecordAuthorityDelegate.ts  createRecordTokenizable.ts  deleteRecord.ts  deleteRecordAuthorityDelegate.ts  freezeClass.ts  freezeRecord.ts  freezeTokenizedRecord.ts  index.ts  mintRecordToken.ts  mintTokenizedRecord.ts  transferRecord.ts  transferTokenizedRecord.ts  updateClassFrozen.ts  updateClassMetadata.ts  updateRecord.ts  updateRecordAuthorityDelegate.ts  updateRecordToken.ts  updateRecordTokenizable.ts  updateTokenizedRecord.ts
sdk/ts/src/programs/: solanaRecordService.ts
sdk/ts/src/resolution/: caip.ts  constants.ts  errors.ts  forwardResolver.ts  index.ts  namehash.ts  pda.ts  provider.ts  recordDecoder.ts  resolver.ts  reverseResolver.ts  tr46.d.ts  tupleCodec.ts
sdk/ts/src/types/: index.ts  metadata.ts
sdk/ts/test/: helpers.ts  resolution.spec.ts
src/: lib.rs  sdk.rs  tests.rs  utils.rs
src/accounts/: mod.rs
src/instructions/: create_class.rs  create_credential.rs  create_record.rs  create_record_delegate.rs  delete_record.rs  freeze_class.rs  freeze_record.rs  mod.rs  transfer_record.rs  update_class.rs  update_credential.rs  update_record.rs
src/state/: class.rs  credential.rs  mod.rs  record.rs  record_delegate.rs
src/tests/: create_class.rs  create_credential.rs  mod.rs  update_class.rs
tests/: test.spec.ts
