[package]
name = "solana-record-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["perf"]
perf = []

[dependencies]
pinocchio = "0.8.3"
pinocchio-system = "0.2.3"
pinocchio-associated-token-account = "0.1.1"

[dev-dependencies]
solana-record-service-client = { workspace = true }
mollusk-svm = "0.4.0"
mollusk-svm-programs-token = "0.4.0"
spl-token-2022 = "8.0.1"
solana-precompiles = "2.2.2"
solana-account = "2.2.1"
solana-pubkey = "2.2.1"
solana-feature-set = "2.2.1"
solana-program = "2.2.1"
kaigan = ">=0.2.6"
borsh = "^0.10"
hex = "0.4.3"