[package]
name = "solana-record-service"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = ["perf"]
perf = []

[dependencies]
pinocchio = "0.9.2"
pinocchio-system = "0.3.0"
pinocchio-associated-token-account = "0.2.0"

[dev-dependencies]
solana-record-service-client = { workspace = true }
mollusk-svm = "0.7.0"
mollusk-svm-programs-token = "0.7.0"
spl-token-2022 = "9.0.0"
solana-precompiles = "2.2.2"
solana-account = "3.0.0"
solana-pubkey = "3.0.0"
solana-feature-set = "2.2.5"
solana-program = "3.0.0"
kaigan = { path = "../../kaigan" }
borsh = "1.5.7"
hex = "0.4.3"