[package]
name = "solana-record-service-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for the Solana Record Service"
license = "MIT"
repository = "https://github.com/solana-foundation/solana-record-service"

[lib]
name = "solana_record_service_client"

[dependencies]
kaigan = ">=0.2.6"
borsh = "^0.10"
solana-program = "2.3.0"
solana-instruction = "2.3.0"
solana-pubkey = "2.3.0"
solana-account-info = "2.3.0"
solana-program-entrypoint = "2.3.0"
solana-cpi = "2.2.1"