[package]
name = "solana-record-service-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for the Solana Record Service"
license = "MIT"
repository = "https://github.com/solana-foundation/solana-record-service"

[lib]
name = "solana_record_service_client"

[features]
default = []
anchor = ["dep:anchor-lang"]
anchor-idl-build = ["anchor", "anchor-lang?/idl-build"]
fetch = ["dep:solana-client"]

[dependencies]
borsh = "^1.0"
solana-account = "3.2.0"
solana-account-info = "~3.1"
solana-instruction = "~3.2"
solana-program-error = "~3.0"
solana-cpi = "~3.1"

[dependencies.solana-address]
features = ["borsh", "copy", "curve25519", "decode"]
version = "~2.2"

[dependencies.spl-collections]
features = ["borsh"]
version = "^0.1"

[dependencies.solana-client]
optional = true
version = "^3.0"

[dependencies.anchor-lang]
optional = true
version = "~0.31"
