[package]
name = "solana-record-service-client"
version = "0.1.0"
edition = "2021"
description = "Rust client for the Solana Record Service"
license = "MIT"
repository = "https://github.com/solana-foundation/solana-record-service"

[lib]
name = "solana_record_service_client"

[dependencies]
kaigan = { git = "https://github.com/metaplex-foundation/kaigan.git", rev = "8b8f45da59f75e40167c8f7f5e46ff29e0865fe1" }
borsh = "1.5.7"
solana-program = "3.0.0"
solana-instruction = "3.0.0"
solana-pubkey = { version = "3.0.0", features = ["borsh"] }
solana-account-info = "3.0.0"
solana-program-entrypoint = "3.1.0"
solana-cpi = "3.0.0"
